partial error fixed  commit by Unnathi